improved test coverage to 90%+